# NVIDIA___instant-nurec

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  THIRD_PARTY_LICENSE.txt  TROUBLESHOOTING.md  conftest.py  pyproject.toml  run.sh  run_inference.py  setup.sh
instant_nurec/: cli.py  ncore_input.py  pretrained.py
instant_nurec/config_schema/: README.md  base_schema.py  dataset.py  instantnurec.py  models.py  predict.py
instant_nurec/datasets/: datamodule.py  instantnurec_base.py  instantnurec_ncore.py  ray_intersections.py  samplers.py  tracks.py  utils.py
instant_nurec/model/: __init__.py  activations.py  inference.py  jit_adapter.py  kelvin.py  post_processing.py  static_core.py  system.py
instant_nurec/model/backbone/: base.py  decoders.py  encoders.py  sky.py
instant_nurec/model/blocks/: aa_vit.py  attention.py  dav3.py  dpt.py  embeds.py  layers.py
instant_nurec/predict/: export_ply.py  primitive_merge.py  run.py
instant_nurec/primitives/: base.py  kelvin_primitive.py
instant_nurec/utils/: __init__.py  batch.py  cubemap.py  files.py  geometry.py  merge_covariances.py  misc.py  motion.py  ncore_utils.py  nn_extensions.py  packed_ops.py  se3.py  sensor.py  trajectory.py  types.py
instant_nurec/utils/gaussians/: utils.py
instant_nurec/utils/sensors/: __init__.py  kernel_types.py  ncore_sensors_converters.py  ray_gen.py  sensors.py
tests/: test_batch.py  test_bivariate_windshield.py  test_cli.py  test_config.py  test_cubemap.py  test_datasets_utils.py  test_files.py  test_gaussians_utils.py  test_geometry.py  test_inference.py  test_jit_adapter.py  test_kelvin_primitive.py  test_merge_covariances.py  test_misc.py  test_motion.py  test_ncore_input.py  test_ncore_sensors_converters.py  test_ncore_utils.py  test_nn_extensions.py  test_packed_ops.py  test_pretrained.py  test_primitive_merge.py  test_samplers.py  test_se3pose.py  test_sensors.py  test_system_export_banner.py  test_systems_make.py  test_tracks.py  test_types.py
