[project]
name = "instant_nurec"
version = "0.1.0"
description = "Standalone InstantNuRec Kelvin predict pipeline (ncorev4 ingest → Kelvin predict → 3D-Gaussian PLY export)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
dependencies = [
    # All deps are version-pinned so any parity / runtime drift is
    # attributable to a deliberate dep bump rather than to whichever
    # wheel happens to be the latest at install time.
    "einops==0.8.1",
    "huggingface_hub==0.36.2",
    "numcodecs==0.11.0",
    "numpy==1.26.4",
    "nvidia-ncore==18.7.0",
    "pandas==2.3.3",
    "pillow==12.2.0",
    "point-cloud-utils==0.34.0",
    "pydantic==2.8.2",
    "pyyaml==6.0",
    "scipy==1.11.1",
    "shortuuid==1.0.11",
    "torch==2.7.0+cu128",
    "torch-scatter==2.1.2",
    "torchvision==0.22.0+cu128",
    "urllib3>=2.7.0",
    "tqdm==4.66.3",
    "universal-pathlib==0.3.6",
    "zarr==2.18.2",
]

[project.scripts]
instant-nurec = "instant_nurec.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["instant_nurec*"]
exclude = ["tests*"]

# uv resolves torch / torchvision from the PyTorch CUDA 12.8 wheel index,
# and torch-scatter from the matching PyG flat index (wheels pre-built
# against the same torch+cu128 ABI). Everything else comes from PyPI.
# The ``explicit = true`` flag means uv only consults each index for
# packages that explicitly opt in via ``[tool.uv.sources]``.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pyg-torch-2.7.0-cu128"
url = "https://data.pyg.org/whl/torch-2.7.0+cu128.html"
explicit = true
format = "flat"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torch-scatter = { index = "pyg-torch-2.7.0-cu128" }

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    # Prevent checking ci-cache files
    ".ci-keep",
]

[tool.ruff.lint.per-file-ignores]
# Tests + run_inference.py prepend the repo root to sys.path before importing
# in-tree modules; ruff's E402 (module-level import not at top of file) flags
# the legitimate ordering.
"tests/*.py" = ["E402"]
"run_inference.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["instant_nurec", "ncore"]
default-section = "third-party"
known-third-party = ["wandb"] # prevent local wandb folders to be treaded as different package - see https://github.com/astral-sh/ruff/issues/8571
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-between-types = 1
lines-after-imports = 2

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
